# h501-gutenberg

./: .gitignore  README.md  gutenberg.ipynb  gutenberg_aliases.txt  pyproject.toml  test_aliases.ipynb
DLLs/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _ctypes_test.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  _testbuffer.pyd  _testcapi.pyd  _testclinic.pyd  _testclinic_limited.pyd  _testconsole.pyd  _testimportmultiple.pyd  _testinternalcapi.pyd  _testlimitedcapi.pyd  _testmultiphase.pyd  _testsinglephase.pyd  _tkinter.pyd  _uuid.pyd  _wmi.pyd  _zoneinfo.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd  winsound.pyd  xxlimited.pyd  xxlimited_35.pyd
conda-meta/: _python_abi3_support-1.0-hd8ed1ab_2.json  asttokens-3.0.0-pyhd8ed1ab_1.json  bzip2-1.0.8-h0ad9c76_8.json  ca-certificates-2025.8.3-h4c7d964_0.json  colorama-0.4.6-pyhd8ed1ab_1.json  comm-0.2.3-pyhe01879c_0.json  cpython-3.13.7-py313hd8ed1ab_100.json  debugpy-1.8.17-py313h927ade5_0.json  decorator-5.2.1-pyhd8ed1ab_0.json  exceptiongroup-1.3.0-pyhd8ed1ab_0.json  executing-2.2.1-pyhd8ed1ab_0.json  history  importlib-metadata-8.7.0-pyhe01879c_1.json  ipykernel-6.30.1-pyh3521513_0.json  ipython-9.5.0-pyh6be1c34_0.json  ipython_pygments_lexers-1.1.1-pyhd8ed1ab_0.json  (+43 more)
gutenbergpackage/: LICENSE  README.md  main.py  pyproject.toml  setup.cfg
gutenbergpackage/.github/workflows/: ci.yml
gutenbergpackage/gutenbergpkg/: __init__.py  guten.py
gutenbergpackage/main folder/: guten.py
gutenbergpackage/tests/: test_guten.py
(+10 files in other folders)
